#
#
#                              Copyright (c) 2014
#                            Lantiq Deutschland GmbH
#
#  For licensing information, see the file 'LICENSE' in the root folder of
#  this software module.
#
#

EXTRA_DIST = \
	drv_tapi_io.dtd\
	drv_tapi_io.xml\
	drv_tapi_qos_io.xml\
	drv_tapi_io_handler.xsl\
	drv_tapi_io_handler_type.xsl\
	drv_tapi_io_handler_decl.xsl\
	drv_tapi_io_index.xsl\
	drv_tapi_io_lookup.xsl
